; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/lib/win32err/extr_win32err.c_PrintWin32Error.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/lib/win32err/extr_win32err.c_PrintWin32Error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@LANG_NEUTRAL = common dso_local global i32 0, align 4
@SUBLANG_DEFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i32] [i32 37, i32 115, i32 58, i32 32, i32 37, i32 115, i32 10, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PrintWin32Error(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %7 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @LANG_NEUTRAL, align 4
  %11 = load i32, i32* @SUBLANG_DEFAULT, align 4
  %12 = call i32 @MAKELANGID(i32 %10, i32 %11)
  %13 = bitcast i8** %5 to i8*
  %14 = call i32 @FormatMessageW(i32 %8, i32* null, i32 %9, i32 %12, i8* %13, i32 0, i32* null)
  %15 = load i8*, i8** %3, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @wprintf(i8* bitcast ([8 x i32]* @.str to i8*), i8* %15, i8* %16)
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @LocalFree(i8* %18)
  ret void
}

declare dso_local i32 @FormatMessageW(i32, i32*, i32, i32, i8*, i32, i32*) #1

declare dso_local i32 @MAKELANGID(i32, i32) #1

declare dso_local i32 @wprintf(i8*, i8*, i8*) #1

declare dso_local i32 @LocalFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
